--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <script>
   layui.config({
     base: '../src/' //指定 layuiAdmin 项目路径，本地开发用 src，线上用 dist
-    , version: new Date().getTime()
+    , version: '1.0.1'
   }).use('index');
  
   </script>
