--- a/start/index.html
+++ b/start/index.html
@@ -18,8 +18,8 @@
   <script src="layui/layui.js"></script>
   <script>
   layui.config({
-    base: '../dist/' //指定 layuiAdmin 项目路径，本地开发用 src，线上用 dist
-    , version: new Date().getTime()
+    base: '../src/' //指定 layuiAdmin 项目路径，本地开发用 src，线上用 dist
+    , version: new Date()
   }).use('index');
   layui.config({
 	base: './'
